fix(ConfirmModal):WB-4005 fix margin on mobile (#357)

--- a/packages/bootstrap/src/components/_modal.scss
+++ b/packages/bootstrap/src/components/_modal.scss
@@ -120,6 +120,7 @@
     }
   }
 
+  &.modal-sm,
   &.modal-md,
   &.modal-lg {
     padding-inline: $spacer-16;
